{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 115,
  "lineage": "cd18921a-c36c-9ff6-949e-e6eda2b277b3",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "st1_ex_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476293896981:security-group/sg-0676ed20162a45155",
            "description": "Security group for st1 example",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "st1-alb-sg"
                ]
              }
            ],
            "id": "sg-0676ed20162a45155",
            "name": "st1-alb-sg",
            "region": "ap-south-1",
            "tags": {
              "Name": "st1-alb-sg",
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e7d0e5573c1c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "st1_ex_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476293896981:security-group/sg-042756af3a5d0efb7",
            "description": "Security group for st1 http example",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "st1-http-sg"
                ]
              }
            ],
            "id": "sg-042756af3a5d0efb7",
            "name": "st1-http-sg",
            "region": "ap-south-1",
            "tags": {
              "Name": "st1-http-sg",
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "timeouts": null,
            "vpc_id": "vpc-05e7d0e5573c1c358"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "st1_ex_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:476293896981:vpc/vpc-05e7d0e5573c1c358",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-05b4030b9a06c59c5",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-02fb1f2b7284960b8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "st1-ex-vpc"
                ]
              }
            ],
            "id": "vpc-05e7d0e5573c1c358",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b10b6bd52b5b7ed1",
            "owner_id": "476293896981",
            "region": "ap-south-1",
            "tags": {
              "Name": "st1-ex-vpc",
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "st1_ex_alb_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e12ffc2dd465f6e4",
            "arn": "arn:aws:ec2:ap-south-1:476293896981:instance/i-004aedfd0bbcf42cb",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004aedfd0bbcf42cb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "st1-key-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07366b6aed7f09c00"
              }
            ],
            "primary_network_interface_id": "eni-07366b6aed7f09c00",
            "private_dns": "ip-10-0-2-246.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": true,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.246",
            "public_dns": "ec2-13-203-208-122.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.208.122",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "manageby": "terraform",
                  "owner": "st1",
                  "project": "MSP-Solution-Architect-Training"
                },
                "throughput": 125,
                "volume_id": "vol-0490ecf160783ec85",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09797c08cc01a397e",
            "tags": {
              "Name": "st1_ex_alb_instance"
            },
            "tags_all": {
              "Name": "st1_ex_alb_instance",
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-042756af3a5d0efb7",
              "sg-0676ed20162a45155"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "476293896981",
            "id": "i-004aedfd0bbcf42cb",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_key_pair.st1_key_2",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_security_group.st1_ex_http_sg",
            "data.aws_subnets.st1_ex_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "st1_ex_docker_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b",
            "arn_suffix": "app/st1-ex-docker-alb/95437af4cd1de96b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "st1-ex-docker-alb-1136948909.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "st1-ex-docker-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0676ed20162a45155"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01d6f6765b836c2b8"
              },
              {
                "subnet_id": "subnet-09797c08cc01a397e"
              }
            ],
            "subnets": [
              "subnet-01d6f6765b836c2b8",
              "subnet-09797c08cc01a397e"
            ],
            "tags": {
              "name": "st1-ex-docker-alb"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-docker-alb",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "vpc_id": "vpc-05e7d0e5573c1c358",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b"
          },
          "dependencies": [
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_subnets.st1_ex_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "st1_ex_alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/61f4e649cc51d66b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/61f4e649cc51d66b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "name": "st1-ex-alb-http-listener"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-alb-http-listener",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/61f4e649cc51d66b"
          },
          "dependencies": [
            "aws_lb.st1_ex_docker_alb",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_subnets.st1_ex_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "st1_ex_alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f",
            "certificate_arn": "arn:aws:acm:ap-south-1:476293896981:certificate/cb5cc79c-9c9e-4336-94a7-b849736b8bf3",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "name": "st1-ex-alb-https-listener"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-alb-https-listener",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f"
          },
          "dependencies": [
            "aws_lb.st1_ex_docker_alb",
            "aws_lb_target_group.st1_ex_docker_main_tg",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_path_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/ddb3b60ca1e2e778",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/api",
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/ddb3b60ca1e2e778",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f",
            "priority": 20,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/ddb3b60ca1e2e778"
          },
          "dependencies": [
            "aws_lb.st1_ex_docker_alb",
            "aws_lb_listener.st1_ex_alb_https_listener",
            "aws_lb_target_group.st1_ex_docker_main_tg",
            "aws_lb_target_group.st1_ex_fastapi_tg",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "install_path_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/62ffad69de213325",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/install",
                      "/install/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/62ffad69de213325",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f",
            "priority": 30,
            "region": "ap-south-1",
            "tags": null,
            "tags_all": {
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/62ffad69de213325"
          },
          "dependencies": [
            "aws_lb.st1_ex_docker_alb",
            "aws_lb_listener.st1_ex_alb_https_listener",
            "aws_lb_target_group.st1_ex_docker_main_tg",
            "aws_lb_target_group.st1_ex_install_tg",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "sub_path_sub_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/14e39bb382289679",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/sub",
                      "/sub/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/14e39bb382289679",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f",
            "priority": 10,
            "region": "ap-south-1",
            "tags": {},
            "tags_all": {
              "manageby": "terraform",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:listener-rule/app/st1-ex-docker-alb/95437af4cd1de96b/4795b3d5988fd24f/14e39bb382289679"
          },
          "dependencies": [
            "aws_lb.st1_ex_docker_alb",
            "aws_lb_listener.st1_ex_alb_https_listener",
            "aws_lb_target_group.st1_ex_docker_main_tg",
            "aws_lb_target_group.st1_ex_docker_sub_tg",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "st1_ex_docker_main_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128",
            "arn_suffix": "targetgroup/st1-ex-docker-main-tg/787f14493ee4e128",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "st1-ex-docker-main-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "st1-ex-docker-main-tg"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-docker-main-tg",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05e7d0e5573c1c358"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128"
          },
          "dependencies": [
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "st1_ex_docker_sub_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407",
            "arn_suffix": "targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "st1-ex-docker-sub-tg",
            "port": 8081,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "st1-ex-docker-sub-tg"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-docker-sub-tg",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05e7d0e5573c1c358"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407"
          },
          "dependencies": [
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "st1_ex_fastapi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a",
            "arn_suffix": "targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:476293896981:loadbalancer/app/st1-ex-docker-alb/95437af4cd1de96b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "st1-ex-fastapi-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "st1-ex-fastapi-tg"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-fastapi-tg",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05e7d0e5573c1c358"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a"
          },
          "dependencies": [
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "st1_ex_install_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3",
            "arn_suffix": "targetgroup/st1-ex-install-tg/f9044abdc07a9df3",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/install",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "st1-ex-install-tg",
            "port": 8082,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "st1-ex-install-tg"
            },
            "tags_all": {
              "manageby": "terraform",
              "name": "st1-ex-install-tg",
              "owner": "st1",
              "project": "MSP-Solution-Architect-Training"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05e7d0e5573c1c358"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3"
          },
          "dependencies": [
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "st1_ex_docker_main_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128,i-004aedfd0bbcf42cb,8080",
            "port": 8080,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "476293896981",
            "port": 8080,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-main-tg/787f14493ee4e128",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "dependencies": [
            "aws_instance.st1_ex_alb_instance",
            "aws_lb_target_group.st1_ex_docker_main_tg",
            "data.aws_key_pair.st1_key_2",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_security_group.st1_ex_http_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "st1_ex_docker_sub_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407,i-004aedfd0bbcf42cb,8081",
            "port": 8081,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "476293896981",
            "port": 8081,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-docker-sub-tg/86787f5b0e670407",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "dependencies": [
            "aws_instance.st1_ex_alb_instance",
            "aws_lb_target_group.st1_ex_docker_sub_tg",
            "data.aws_key_pair.st1_key_2",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_security_group.st1_ex_http_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "st1_ex_fastapi_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a,i-004aedfd0bbcf42cb,8000",
            "port": 8000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "476293896981",
            "port": 8000,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-fastapi-tg/881909d95fc36c2a",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "dependencies": [
            "aws_instance.st1_ex_alb_instance",
            "aws_lb_target_group.st1_ex_fastapi_tg",
            "data.aws_key_pair.st1_key_2",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_security_group.st1_ex_http_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "st1_ex_install_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3,i-004aedfd0bbcf42cb,8082",
            "port": 8082,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "476293896981",
            "port": 8082,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:476293896981:targetgroup/st1-ex-install-tg/f9044abdc07a9df3",
            "target_id": "i-004aedfd0bbcf42cb"
          },
          "dependencies": [
            "aws_instance.st1_ex_alb_instance",
            "aws_lb_target_group.st1_ex_install_tg",
            "data.aws_key_pair.st1_key_2",
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_security_group.st1_ex_http_sg",
            "data.aws_subnets.st1_ex_public_subnet",
            "data.aws_vpc.st1_ex_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "st1_ex_http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3238440400",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-042756af3a5d0efb7",
            "security_group_rule_id": "sgr-071c31c749f619cff",
            "self": false,
            "source_security_group_id": "sg-0676ed20162a45155",
            "timeouts": null,
            "to_port": 8085,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.st1_ex_alb_sg",
            "data.aws_security_group.st1_ex_http_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "st1_ex_http_sg_fastapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8000,
            "id": "sgrule-90848790",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-042756af3a5d0efb7",
            "security_group_rule_id": "sgr-0f231de7791975318",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.st1_ex_http_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "st1_ex_http_sg_install",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8082,
            "id": "sgrule-237227495",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-042756af3a5d0efb7",
            "security_group_rule_id": "sgr-0de2d07bbccff8b65",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8082,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.st1_ex_http_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "st1_ex_http_sg_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-286765984",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-042756af3a5d0efb7",
            "security_group_rule_id": "sgr-0e7493915e346bd2c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.st1_ex_http_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "st1_ex_http_sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-1742520977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-042756af3a5d0efb7",
            "security_group_rule_id": "sgr-05446e83473011cc9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.st1_ex_http_sg"
          ]
        }
      ]
    }
  ]
}